--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -6,6 +6,7 @@
     "com.unity.ide.visualstudio": "2.0.17",
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.probuilder": "5.0.6",
+    "com.unity.render-pipelines.high-definition": "14.0.6",
     "com.unity.shadergraph": "14.0.6",
     "com.unity.terrain-tools": "5.0.3",
     "com.unity.test-framework": "1.1.33",
